feat(competitions): show and filter exact formats
